# rclone-sync-manager

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  rclone_sync_manager.md  requirements.txt  run.bat  run.ps1  run.sh
.github/workflows/: release.yml  tests.yml
rclone_sync_manager/: __main__.py  app.py  autostart.py  cli.py  config.py  database.py  doctor.py  jobs_io.py  lock_manager.py  models.py  notifier.py  platform_utils.py  progress.py  queue_manager.py  rclone_utils.py  remote_watcher.py  resource_monitor.py  resources.py  runner.py  scheduler.py  startup.py  systemd.py  utils.py  watcher.py
rclone_sync_manager/gui/: doctor_dialog.py  job_form.py  job_table.py  log_viewer.py  main_window.py  remote_browser.py  settings_dialog.py  theme.py  tray.py
scripts/: check.sh  dev_run.sh  install.sh  uninstall.sh
systemd/: rclone-sync-manager.service
tests/: test_app_startup.py  test_autostart.py  test_config.py  test_database.py  test_doctor.py  test_job_form.py  test_jobs_io.py  test_locks.py  test_main_module.py  test_progress.py  test_queue.py  test_rclone_utils.py  test_remote_watcher.py  test_runner.py  test_runner_errors.py  test_systemd.py  test_utils.py
